syntax = "proto3";
package pb;
option go_package = "./;pb";
	// 观众离开
message PlayerLeaveNotify{
// 玩家id
  string OpenId =1;
}