syntax = "proto3";
package pb;
option go_package = "./;pb";
	// 心跳
message PingReq{

}